major overhaul of dyson's rest component
 * added support for multiple resources by default
 * implemented access to incoming and storage dirs via http
 * refactored Dyson.getRestServer() to return the now used component => Dyson.getRestComponent()
 * refactored prior DysonDefaultRootRestlet into separate resource: RuntimeInformationResource
 * small additions to .gitignore and README.mdown

--- a/.gitignore
+++ b/.gitignore
@@ -2,17 +2,17 @@
 # ignore the following files
 
 # sbt's managed libs dir
-lib_managed
+lib_managed/
 
 # sbt's project boot dir
-project/boot
+project/boot/
 
 # sbt's build targed dir
-project/build/target
+project/build/target/
 
 # sbt's targed directory
-target
+target/
 
 # local tmp directory
-tmp
+tmp/
 
