final (hopefully) changed on the way to release dyson v1.1 into the wild
 * added .project, .classpath and *.bak to .gitignore
 * small additions to README.md
 * integrated addition of Dyson instance to restlet context into DysonRestApp
 * added missing copyright headers using licensing.sh
 * small improvements to dyson.sh
 * created smtp-bomber.sh - a shell script to run SmtpBomber in order to test the dyson started by dyson.sh

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 
 # ignore the following files
 
+#temporary or backup files
+*.bak
+
 # sbt's managed libs dir
 lib_managed/
 
@@ -16,3 +19,6 @@ target/
 # local tmp directory
 tmp/
 
+# eclipse's .project and .classpath files
+.project
+.classpath
